welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = 
{
	if (a<10 && a>b)
	{
		return a
	} else {
		return b
	}
	if (a>10 && a<b)
	{
		return a
	} else {
		return b
	}
	if (a=b || a+b=20)
	{
		return 0
	}
}
